--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
     <title></title>
 </head>
 <body>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+        }
+    </style>
     <div id="app"></div>
 </body>
 </html>
